# c-programming_

./: README.md  🥐🥐🥐🥐🥐🥐🥐🥐🥐
semester_1/lab1/: fareng-celc.c  graph.c  leap-years.c  task1-leap-years.c  task2-fareng-celc.c  task3-graph.c
semester_1/lab10/: lab10.c  lab10func.c  lab10head.c  lab10main.c
semester_1/lab10/with make/: Makefile  lab10head.c  lab10head.h  lab10main.c
semester_1/lab11/: TASK4.c  task1.c  task2.c  task3.c
semester_1/lab2/: tasks_1-5.c
semester_1/lab3/: loops.c
semester_1/lab4/: task1.c  task2.c
semester_1/lab5/: tsak2.c
semester_1/lab6/: task1.c
semester_1/lab7/: lab6.c
semester_1/lab8/: lab8_now-Kramer_Edition.c  laba8.c
semester_1/lab9/: lab9.c  lab9defence.c  lab9malloc.c
semester_2/keyboard_trainer/: keyboar_trainer.c
semester_2/keyboard_trainer/k_trainer_cmake/: CMakeLists.txt
semester_2/keyboard_trainer/k_trainer_cmake/include/: common.h  stats.h  training.h
semester_2/keyboard_trainer/k_trainer_cmake/src/: main.c  stats.c  training.c
semester_2/lab_1/: fixedtimecount.c  lab 1 prog finished.c  plus task.c
semester_2/lab_2/: lab2working.c
semester_2/lab_4/: lab4.c
semester_2/lab_5/: lab5.c
semester_2/lab_6/: Konsole.txt  kakugodno.h  lab4.c  pon.c
semester_2/lab_7/: chinatable.c  matrix.c  matrix.h  tests.c  threads.c
semester_2/lab_8/: CMakeLists.txt  matrix.c  matrix.h  tests.c
